--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-scripts": "^4.0.0-next.77",
     "react-three-fiber": "5.0.0-beta.11",
     "react-three-gui": "^0.1.5",
-    "react-use-gesture": "^7.0.15",
+    "react-use-gesture": "^8.0.0-alpha.2",
     "styled-components": "^5.1.1",
     "three": "^0.119.1"
   },
