--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-plugin-glsl": "^1.0.0",
     "craco-glslify-loader": "^1.0.2",
     "drei": "^0.0.72",
+    "glsl-easings": "^1.0.0",
     "glsl-noise": "^0.0.0",
     "postprocessing": "^6.16.0",
     "react": "^16.13.1",
