--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "drei": "^0.0.72",
     "glsl-easings": "^1.0.0",
     "glsl-noise": "^0.0.0",
+    "merge-refs": "^1.0.0",
     "postprocessing": "^6.16.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -24,7 +25,8 @@
     "react-use-gesture": "^8.0.0-alpha.2",
     "styled-components": "^5.1.1",
     "three": "^0.119.1",
-    "use-capture": "^0.1.0"
+    "use-capture": "^0.4.0",
+    "use-tweaks": "^0.0.1-alpha.10"
   },
   "scripts": {
     "start": "craco start",
