--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.11.1",
+    "@babel/core": "^7.11.6",
     "@craco/craco": "^5.6.4",
     "@react-spring/three": "^9.0.0-rc.3",
     "babel-plugin-glsl": "^1.0.0",
     "craco-glslify-loader": "^1.0.2",
-    "drei": "1.4.0-beta.0",
+    "drei": "1.5.6",
     "glsl-easings": "^1.0.0",
     "glsl-noise": "^0.0.0",
     "merge-refs": "^1.0.0",
-    "postprocessing": "^6.16.0",
+    "postprocessing": "^6.17.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "react-postprocessing": "^1.1.4",
+    "react-postprocessing": "^1.3.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0-next.77",
-    "react-three-fiber": "5.0.0-beta.11",
+    "react-three-fiber": "5.0.0-beta.12",
     "react-use-gesture": "^8.0.0-alpha.2",
-    "styled-components": "^5.1.1",
-    "three": "^0.119.1",
+    "styled-components": "^5.2.0",
+    "three": "^0.120.1",
     "use-capture": "^0.4.0",
     "use-tweaks": "^0.1.0"
   },
@@ -56,8 +56,8 @@
     }
   },
   "devDependencies": {
-    "husky": "^4.2.5",
-    "prettier": "^2.0.5",
-    "pretty-quick": "^2.0.1"
+    "husky": "^4.3.0",
+    "prettier": "^2.1.1",
+    "pretty-quick": "^3.0.2"
   }
 }
