--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@react-spring/three": "^9.0.0-rc.3",
     "babel-plugin-glsl": "^1.0.0",
     "craco-glslify-loader": "^1.0.2",
-    "drei": "1.5.6",
+    "drei": "1.5.7",
     "glsl-easings": "^1.0.0",
     "glsl-noise": "^0.0.0",
     "merge-refs": "^1.0.0",
@@ -16,11 +16,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "react-postprocessing": "^1.3.1",
+    "react-postprocessing": "^1.4.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0-next.77",
-    "react-three-fiber": "5.0.0-beta.12",
+    "react-three-fiber": "5.0.1",
     "react-use-gesture": "^8.0.0-alpha.2",
     "styled-components": "^5.2.0",
     "three": "^0.120.1",
@@ -57,7 +57,7 @@
   },
   "devDependencies": {
     "husky": "^4.3.0",
-    "prettier": "^2.1.1",
+    "prettier": "^2.1.2",
     "pretty-quick": "^3.0.2"
   }
 }
