updates & removal of stuff

--- a/package.json
+++ b/package.json
@@ -3,29 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.11.6",
-    "@craco/craco": "^5.6.4",
+    "@babel/core": "^7.12.10",
+    "@craco/craco": "^6.1.0",
     "@react-spring/three": "^9.0.0-rc.3",
+    "@react-three/drei": "^3.1.0",
     "babel-plugin-glsl": "^1.0.0",
     "craco-glslify-loader": "^1.0.2",
-    "drei": "1.5.7",
     "glsl-easings": "^1.0.0",
     "glsl-noise": "^0.0.0",
     "merge-refs": "^1.0.0",
-    "postprocessing": "^6.17.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "ombra": "^0.2.0",
+    "postprocessing": "^6.20.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-postprocessing": "^1.4.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.0-next.77",
-    "react-three-fiber": "5.0.1",
-    "react-use-gesture": "^8.0.0-alpha.2",
-    "styled-components": "^5.2.0",
-    "three": "^0.120.1",
+    "react-scripts": "^4.0.1",
+    "react-three-fiber": "5.3.18",
+    "react-use-gesture": "^9.0.0",
+    "styled-components": "^5.2.1",
+    "three": "^0.125.2",
+    "tweakpane": "^1.5.8",
     "use-capture": "^0.4.0",
-    "use-tweaks": "^0.1.0"
+    "use-tweaks": "^0.3.1"
   },
   "scripts": {
     "start": "craco start",
@@ -56,8 +58,8 @@
     }
   },
   "devDependencies": {
-    "husky": "^4.3.0",
-    "prettier": "^2.1.2",
-    "pretty-quick": "^3.0.2"
+    "husky": "^4.3.8",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0"
   }
 }
